--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -15,6 +15,11 @@ security:
 
         main:
             anonymous: ~
+            form_login:
+                login_path: login
+                check_path: login
+                default_target_path: /login
+                always_use_default_target_path: true
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
