--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,12 +1,14 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
 security:
-
+    encoders:
+        AppBundle\Entity\User:
+            algorithm: bcrypt
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
         in_memory:
             memory: ~
-
+            
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
@@ -18,8 +20,14 @@ security:
             form_login:
                 login_path: login
                 check_path: login
-                default_target_path: /login
+                # toegevoegd
                 always_use_default_target_path: true
+                default_target_path: login
+                failure_path: login
+
+    access_control:
+            - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/, roles: ROLE_ADMIN }
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
